[tool.poetry]
name = "covid_tracker"
version = "0.0.3"
description = "Retrieve Covid-19 stats by Country, State, and County"
authors = ["Mitch Haddadi <12067255+dfirsec@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.4"
requests = "^2.31.0"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
